<resources>
    <string name="app_name">DictionaryApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="definitions">Definitions</string>
    <string name="random_description">random description</string>


    <string name="new_user_signup">No have an account yet ?<b> Sign Up!</b> </string>
    <string name="memefun">Meme<font fgcolor="#FFBE33">Fun</font></string>
    <string name="type_your_name_here">Insert your full name</string>
    <string name="type_your_email_here">Insert an email valid</string>
    <string name="type_your_password_here">Insert a password</string>
    <string name="type_your_confirm_password">confirm your password</string>
    <string name="logo_of_memefun">Logo of MemeFun</string>
    <string name="register">Register</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="meme_fun_logo">MemeFun Logo</string>
    <string name="text_sign_in">Text sign in</string>
    <string name="sign_in">Sign in</string>
    <string name="insert_your_email">Insert your email</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="login">Login</string>
    <string name="full_name">full name</string>
    <string name="sign_up">Sign up</string>
    <string name="background">background</string>
    <string name="profile_image">Profile Image</string>
    <string name="username">username</string>
</resources>